--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "start" : "node server.js",
     "dev": "nodemon -r dotenv/config"
   },
   "keywords": [],
